DATE       AUTHOR       CHANGE
---------- -----------  -------------------------------------------------------
2002-06-10 subatomic    Render player/camera, steer with mouse like abuse
2002-06-09 aegis        Main menu and good transitions
2002-06-09 nonchocoboy  Play theme music in the intro!
2002-06-09 aegis        State architecture
2002-06-09 nonchocoboy  Added sound framework.
2002-06-06 aegis        Render an intro image
2002-06-06 aegis        Added beginnings of state architecture
2002-06-05 aegis        Added main() and got a line on the screen
2002-06-05 nonchocoboy  Created the bounds collision detector.
2002-06-04 nonchocoboy  Added collision detection system interfaces.
2002-05-29 aegis        setup repository